[fix] Fixed z-index issue with NavBar and Modal

--- a/src/component/Modal/Modal.scss
+++ b/src/component/Modal/Modal.scss
@@ -10,6 +10,7 @@
     overflow-y: auto;
     justify-content: center;
     align-items: flex-start;
+    z-index: 999;
 
     &__overlay {
         position: fixed;
